fix: group A fetcher, group B fetcher
